--- a/index.html
+++ b/index.html
@@ -21,54 +21,51 @@
         </button>
       </div>
       <div class="row g-3 mb-4 text-center">
+
   <div class="col-md-3">
-    <div class="p-3 border rounded bg-success text-white">
-      <h6>Total Pemasukan</h6>
-      <h5 id="totalPemasukan">Rp 0</h5>
-    </div>
+  <div class="p-3 border rounded bg-success text-white">
+    <h6>Total Pemasukan</h6>
+    <h5 id="totalPemasukan">Rp 0</h5>
   </div>
-  <div class="col-md-3">
-    <div class="p-3 border rounded bg-danger text-white">
-      <h6>Total Pengeluaran</h6>
-      <h5 id="totalPengeluaran">Rp 0</h5>
-    </div>
+</div>
+<div class="col-md-3">
+  <div class="p-3 border rounded" style="background-color: #b22222; color: white;">
+    <h6>Total Pengeluaran</h6>
+    <h5 id="totalPengeluaran">Rp 0</h5>
   </div>
-  <div class="col-md-3">
-    <div class="p-3 border rounded bg-warning text-dark">
-      <h6>Total Assets</h6>
-      <h5 id="totalAssets">Rp 0</h5>
-    </div>
+</div>
+<div class="col-md-3">
+  <div class="p-3 border rounded bg-warning text-dark">
+    <h6>Total Assets</h6>
+    <h5 id="totalAssets">Rp 0</h5>
   </div>
-  <div class="col-md-3">
-    <div class="p-3 border rounded bg-primary text-white">
-      <h6>Saldo Akhir</h6>
-      <h5 id="saldoAkhir">Rp 0</h5>
-    </div>
+</div>
+<div class="col-md-3">
+  <div class="p-3 border rounded" style="background-color: #006f3c; color: white;">
+    <h6>Saldo Akhir</h6>
+    <h5 id="saldoAkhir">Rp 0</h5>
   </div>
-  <div class="col-md-3">
-    <div class="p-3 border rounded bg-primary text-white">
-      <h6>Cakupan</h6>
-      <h5 id="areaPenyebaran">Rp 0</h5>
-    </div>
+</div>
+<div class="col-md-3">
+  <div class="p-3 border rounded bg-info text-dark">
+    <h6>Total Pelanggan</h6>
+    <h5 id="totalPelanggan">0</h5>
   </div>
-  <div class="col-md-3">
-    <div class="p-3 border rounded bg-warning text-dark">
-      <h6>Total Pelanggan</h6>
-      <h5 id="totalPelanggan">0</h5>
-    </div>
+</div>
+<div class="col-md-3">
+  <div class="p-3 border rounded" style="background-color: #005bac; color: white;">
+    <h6>Penghasilan Tetap</h6>
+    <h5 id="penghasilanPelanggan">Rp 0</h5>
   </div>
-  <div class="col-md-3">
-    <div class="p-3 border rounded bg-success text-white">
-      <h6>Penghasilan Tetap</h6>
-      <h5 id="penghasilanPelanggan">Rp 0</h5>
-    </div>
+</div>
+<div class="col-md-3">
+  <div class="p-3 border rounded" style="background-color: #6f42c1; color: white;">
+    <h6>Mbps Tersebar</h6>
+    <h5 id="totalMbps">0 Mbps</h5>
   </div>
-  <div class="col-md-3">
-    <div class="p-3 border rounded bg-danger text-white">
-      <h6>Mbps Tersebar</h6>
-      <h5 id="totalMbps">0 Mbps</h5>
-    </div>
-  </div>
+</div>
+
+
 </div>
 
       <div class="card mb-4">
@@ -105,7 +102,7 @@
 
       <div class="card mb-4">
   <div class="card-header bg-success text-white">
-    <i class="fa-solid fa-chart-simple"></i> Persentase Saham
+    <i class="fa-solid fa-chart-simple"></i> Penanaman Modal
   </div>
   <div class="card-body">
     <div class="row">
