--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
 </div>
 <div class="col-md-3">
-  <div class="p-3 border rounded" style="background-color: #006f3c; color: white;">
+  <div class="p-3 border rounded" style="background-color: #4682b4; color: white;">
     <h6>Saldo Akhir</h6>
     <h5 id="saldoAkhir">Rp 0</h5>
   </div>
@@ -95,7 +95,7 @@
             <small>Saldo</small>
           </div>
           <div class="progress">
-            <div id="progressSaldo" class="progress-bar bg-primary" style="width: 0%;"></div>
+            <div id="progressSaldo" class="progress-bar" style="background-color: #4682b4; width: 0%;"></div>
           </div>
         </div>
       </div>
