--- a/absen.html
+++ b/absen.html
@@ -1,10 +1,17 @@
-<!-- Head -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-<link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.1/css/all.min.css" rel="stylesheet" />
-<link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet" />
-<link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css" />
-<link href="/assets/css/styles.css" rel="stylesheet" />
+<!DOCTYPE html>
+<html lang="id">
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Approval Registrasi Wifi - GENZET HOME</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.1/css/all.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet" />
+  <link href="/assets/css/styles.css" rel="stylesheet" />
+</head>
+
+<body>
   <my-navbar></my-navbar>
 
 <!-- Main Content -->
@@ -105,3 +112,6 @@
 <script type="module" src="https://cdn.jsdelivr.net/npm/sweetalert2@11/+esm"></script>
 <!-- Firebase-init harus sudah benar dan ada export db, auth -->
 <script type="module" src="/assets/js/absen.js"></script>
+
+</body>
+</html>
