--- a/absen.html
+++ b/absen.html
@@ -1,69 +1,73 @@
 <!DOCTYPE html>
 <html lang="id">
-
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Approval Registrasi Wifi - GENZET HOME</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.1/css/all.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>GENZET HOME - Absen</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.1/css/all.min.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet"/>
+  <link href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css" rel="stylesheet"/>
   <link href="/assets/css/styles.css" rel="stylesheet" />
 </head>
-
 <body>
+  <!-- ✅ Navbar Web Component -->
   <my-navbar></my-navbar>
 
-<!-- Main Content -->
-<div class="main-content">
-  <div class="card border mb-4">
-    <div class="card-header bg-success text-white">
-      <i class="fa-solid fa-user-check"></i> Form Absen
-    </div>
-    <div class="card-body">
-      <form id="absenForm">
-        <div class="mb-3">
-          <input type="text" class="form-control" id="nama" readonly>
-        </div>
+  <div class="main-content">
+    <!-- FORM INPUT -->
+    <div class="card border mb-4">
+      <div class="card-header bg-success text-white">
+        <i class="fa-solid fa-user-check"></i> Form Absen
+      </div>
+      <div class="card-body">
+        <form id="absenForm">
+          <div class="mb-3">
+            <input type="text" class="form-control" id="username" readonly>
+          </div>
 
-        <div class="mb-3">
-          <input type="date" class="form-control" id="tanggal" required max="">
-        </div>
+          <div class="mb-3">
+  <label for="tanggal" class="form-label">Tanggal</label>
+  <input type="date" class="form-control" id="tanggal" required />
+</div>
+          <!-- ✅ Tambahan keterangan -->
+          <div class="mb-3">
+            <textarea class="form-control" id="keterangan" rows="3" placeholder="Jelaskan pekerjaan yang dikerjakan..." required></textarea>
+          </div>
 
-        <div class="mb-3">
-          <label class="form-label d-block"></label>
-          <div class="d-flex gap-3 flex-wrap">
-            <div class="form-check flex-fill">
-              <input class="btn-check" type="radio" name="kegiatan" id="kegiatan1" value="Instalasi" autocomplete="off" required>
-              <label class="btn btn-outline-primary w-100 py-3" for="kegiatan1">
-                <i class="fa-solid fa-wrench"></i> Instalasi
-              </label>
-            </div>
-            <div class="form-check flex-fill">
-              <input class="btn-check" type="radio" name="kegiatan" id="kegiatan2" value="Maintenance" autocomplete="off" required>
-              <label class="btn btn-outline-warning w-100 py-3" for="kegiatan2">
-                <i class="fa-solid fa-screwdriver-wrench"></i> Maintenance
-              </label>
-            </div>
-            <div class="form-check flex-fill">
-              <input class="btn-check" type="radio" name="kegiatan" id="kegiatan3" value="Pemutusan" autocomplete="off" required>
-              <label class="btn btn-outline-danger w-100 py-3" for="kegiatan3">
-                <i class="fa-solid fa-plug-circle-xmark"></i> Pemutusan
-              </label>
+          <div class="mb-3">
+            <label class="form-label d-block"></label>
+            <div class="d-flex gap-3 flex-wrap">
+              <div class="form-check flex-fill">
+                <input class="btn-check" type="radio" name="kegiatan" id="kegiatan1" value="Instalasi" autocomplete="off" required>
+                <label class="btn btn-outline-primary w-100 py-3" for="kegiatan1">
+                  <i class="fa-solid fa-wrench"></i> Instalasi
+                </label>
+              </div>
+              <div class="form-check flex-fill">
+                <input class="btn-check" type="radio" name="kegiatan" id="kegiatan2" value="Maintenance" autocomplete="off" required>
+                <label class="btn btn-outline-warning w-100 py-3" for="kegiatan2">
+                  <i class="fa-solid fa-screwdriver-wrench"></i> Maintenance
+                </label>
+              </div>
+              <div class="form-check flex-fill">
+                <input class="btn-check" type="radio" name="kegiatan" id="kegiatan3" value="Pemutusan" autocomplete="off" required>
+                <label class="btn btn-outline-danger w-100 py-3" for="kegiatan3">
+                  <i class="fa-solid fa-plug-circle-xmark"></i> Pemutusan
+                </label>
+              </div>
             </div>
           </div>
-        </div>
 
-        <button type="submit" class="btn btn-success mt-3">
-          <i class="fa-solid fa-check"></i> Simpan Absen
-        </button>
-      </form>
+          <button type="submit" class="btn btn-success mt-3">
+            <i class="fa-solid fa-check"></i> Simpan Absen
+          </button>
+        </form>
+      </div>
     </div>
-  </div>
 
-
- <!-- List Absen -->
-<div class="card mb-4">
+    <!-- TABLE -->
+    <div class="card mb-4">
       <div class="card-header bg-success text-white d-flex justify-content-between align-items-center">
         <div>
           <select id="pageLengthSelect" class="form-select form-select-sm">
@@ -74,44 +78,37 @@
           </select>
         </div>
         <div class="header-controls">
-          <i id="searchBtn" class="fa-solid fa-magnifying-glass" style="cursor:pointer; font-size:1.2rem;" title="Cari Data"></i>
-           <i id="exportExcelBtn" class="fa-solid fa-file-excel" style="cursor:pointer; font-size:1.2rem;" title="Export ke Excel"></i>
+          <i id="searchIcon" class="fa-solid fa-magnifying-glass" style="cursor:pointer; font-size:1.2rem;" title="Cari Data"></i>
+          <i id="exportExcelBtn" class="fa-solid fa-file-excel" style="cursor:pointer; font-size:1.2rem;" title="Export ke Excel"></i>
           <i id="deleteSelectedBtn" class="fa-solid fa-trash" style="cursor:pointer; font-size:1.2rem;" title="Hapus Terpilih"></i>
         </div>
       </div>
 
       <div class="card-body p-0 table-responsive">
         <table class="table table-striped mb-0" id="tabelAbsen">
-          <thead>
-  <tr>
-    <th>No</th>
-    <th>Nama</th>
-    <th>Kegiatan</th>
-    <th>Tanggal Absen</th>
-    <th>Tanggal Input</th> <!-- Tambahkan ini -->
-    <th><input type="checkbox" id="selectAll"></th>
-  </tr>
-</thead>
-          <tbody></tbody>
+          <thead class="table-light">
+            <tr>
+              <th>No</th>
+              <th>Nama</th>
+              <th>Kegiatan</th>
+              <th>Keterangan</th>
+              <th>Tanggal Absen</th>
+              <th>Tanggal Input</th>
+              <th><input type="checkbox" id="selectAll"></th>
+            </tr>
+          </thead>
+          <tbody id="absenBody"></tbody>
         </table>
       </div>
     </div>
+  </div>
 
-
-
-</div>
-
-<!-- Load jQuery dulu -->
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<!-- Load DataTables dan Bootstrap DataTables -->
-<script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
-<!-- XLSX -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-<!-- SweetAlert2 sebagai modul -->
-<script type="module" src="https://cdn.jsdelivr.net/npm/sweetalert2@11/+esm"></script>
-<!-- Firebase-init harus sudah benar dan ada export db, auth -->
-<script type="module" src="/assets/js/absen.js"></script>
-
+  <!-- JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
+  <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+  <script type="module" src="/assets/js/tes.js"></script>
 </body>
 </html>
