--- a/absen.html
+++ b/absen.html
@@ -109,6 +109,6 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
   <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
-  <script type="module" src="/assets/js/tes.js"></script>
+  <script type="module" src="/assets/js/absen.js"></script>
 </body>
 </html>
