--- a/absen.html
+++ b/absen.html
@@ -85,7 +85,7 @@
       </div>
 
       <div class="card-body p-0 table-responsive">
-        <table class="table table-striped mb-0" id="tabelAbsen">
+        <table class="table table-striped mb-0 text-nowrap" id="tabelAbsen">
           <thead class="table-light">
             <tr>
               <th>No</th>
