--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
   <head>
@@ -10,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet" />
     <link href="/assets/css/styles.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" />
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.29/jspdf.plugin.autotable.min.js"></script>
   </head>
   <body>
@@ -21,53 +23,49 @@
         </button>
       </div>
       <div class="row g-3 mb-4 text-center">
-
-  <div class="col-md-3">
-  <div class="p-3 border rounded bg-success text-white">
-    <h6>Total Pemasukan</h6>
-    <h5 id="totalPemasukan">Rp 0</h5>
-  </div>
-</div>
-<div class="col-md-3">
-  <div class="p-3 border rounded" style="background-color: #b22222; color: white;">
-    <h6>Total Pengeluaran</h6>
-    <h5 id="totalPengeluaran">Rp 0</h5>
-  </div>
-</div>
-<div class="col-md-3">
-  <div class="p-3 border rounded bg-warning text-dark">
-    <h6>Total Assets</h6>
-    <h5 id="totalAssets">Rp 0</h5>
-  </div>
-</div>
-<div class="col-md-3">
-  <div class="p-3 border rounded" style="background-color: #4682b4; color: white;">
-    <h6>Saldo Akhir</h6>
-    <h5 id="saldoAkhir">Rp 0</h5>
-  </div>
-</div>
-<div class="col-md-3">
-  <div class="p-3 border rounded bg-info text-dark">
-    <h6>Total Pelanggan</h6>
-    <h5 id="totalPelanggan">0</h5>
-  </div>
-</div>
-<div class="col-md-3">
-  <div class="p-3 border rounded" style="background-color: #005bac; color: white;">
-    <h6>Penghasilan Tetap</h6>
-    <h5 id="penghasilanPelanggan">Rp 0</h5>
-  </div>
-</div>
-<div class="col-md-3">
-  <div class="p-3 border rounded" style="background-color: #6f42c1; color: white;">
-    <h6>Mbps Tersebar</h6>
-    <h5 id="totalMbps">0 Mbps</h5>
-  </div>
-</div>
-
-
-</div>
-
+        <div class="col-md-3">
+          <div class="p-3 border rounded bg-success text-white">
+            <h6>Total Pemasukan</h6>
+            <h5 id="totalPemasukan">Rp 0</h5>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="p-3 border rounded" style="background-color: #b22222; color: white;">
+            <h6>Total Pengeluaran</h6>
+            <h5 id="totalPengeluaran">Rp 0</h5>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="p-3 border rounded bg-warning text-dark">
+            <h6>Total Assets</h6>
+            <h5 id="totalAssets">Rp 0</h5>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="p-3 border rounded" style="background-color: #4682b4; color: white;">
+            <h6>Saldo Akhir</h6>
+            <h5 id="saldoAkhir">Rp 0</h5>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="p-3 border rounded bg-info text-dark">
+            <h6>Total Pelanggan</h6>
+            <h5 id="totalPelanggan">0</h5>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="p-3 border rounded" style="background-color: #005bac; color: white;">
+            <h6>Penghasilan Tetap</h6>
+            <h5 id="penghasilanPelanggan">Rp 0</h5>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="p-3 border rounded" style="background-color: #6f42c1; color: white;">
+            <h6>Mbps Tersebar</h6>
+            <h5 id="totalMbps">0 Mbps</h5>
+          </div>
+        </div>
+      </div>
       <div class="card mb-4">
         <div class="card-header bg-success text-white">
           <i class="fa-solid fa-chart-bar"></i> Perbandingan
@@ -99,30 +97,49 @@
           </div>
         </div>
       </div>
-
-      <div class="card mb-4">
-  <div class="card-header bg-success text-white">
-    <i class="fa-solid fa-chart-simple"></i> Penanaman Modal
-  </div>
-  <div class="card-body">
-    <div class="row">
-      <div class="col-md-6 mb-4">
-        <div style="height: 300px;">
-          <canvas id="barChart"></canvas>
-        </div>
-      </div>
-      <div class="col-md-6 mb-4">
-        <div style="height: 300px;">
-          <canvas id="pieChart"></canvas>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
       <div class="card mb-4">
         <div class="card-header bg-success text-white">
-          <i class="fas fa-cloud-sun"></i> Cuaca Citra Mulya Raya 
+          <i class="fa-solid fa-chart-simple"></i> Performa
+        </div>
+        <div class="card-body p-0">
+          <div class="table-responsive">
+            <table class="table table-striped mb-0 text-nowrap" id="kinerjaTable">
+              <thead class="table-light align-middle text-center">
+                <tr>
+                  <th>No</th>
+                  <th>Nama</th>
+                  <th>Absensi</th>
+                  <th>Modal</th>
+                  <th>Power (%)</th>
+                </tr>
+              </thead>
+              <tbody id="kinerjaBody"></tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <div class="card mb-4">
+        <div class="card-header bg-success text-white">
+          <i class="fa-solid fa-chart-simple"></i> Penanaman Modal
+        </div>
+        <div class="card-body">
+          <div class="row">
+            <div class="col-md-6 mb-4">
+              <div style="height: 300px;">
+                <canvas id="barChart"></canvas>
+              </div>
+            </div>
+            <div class="col-md-6 mb-4">
+              <div style="height: 300px;">
+                <canvas id="pieChart"></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card mb-4">
+        <div class="card-header bg-success text-white">
+          <i class="fas fa-cloud-sun"></i> Cuaca Citra Mulya Raya
         </div>
         <div class="card-body">
           <table class="table table-borderless" id="cuaca">
@@ -138,7 +155,6 @@
           </table>
         </div>
       </div>
-
       <!-- ✅ Card HEADER & container -->
       <div class="card mb-4">
         <div class="card-header bg-success text-white">
@@ -147,26 +163,24 @@
         <div class="card-body">
           <!-- Card isi akan di-render di sini -->
           <div class="timeline-wrapper">
-  <div id="timeline"></div>
-</div>
+            <div id="timeline"></div>
+          </div>
         </div>
       </div>
-   
-    <div id="timeline" class="d-flex gap-3 overflow-auto pb-2"></div>
- </div>
-
-
-<!-- Tambahkan Chart.js CDN jika belum ada -->
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-
+    </div>
+    <!-- Tambahkan Chart.js CDN jika belum ada -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- jQuery (HARUS sebelum DataTables) -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="/assets/js/timeline.js"></script>
     <script type="module" src="/assets/js/weather.js"></script>
     <script type="module" src="/assets/js/laporan.js"></script>
     <script type="module" src="/assets/js/navbar.js"></script>
+    <script type="module" src="assets/js/kinerja.js"></script>
     <script type="module" src="/assets/js/chart.js"></script>
   </body>
 </html>
