--- a/ticketing.html
+++ b/ticketing.html
@@ -94,8 +94,8 @@
             </div>
           </div>
 
-          <div class="text-end">
-            <button type="submit" class="btn btn-primary">
+          <div class="text-start">
+            <button type="submit" class="btn btn-success">
               <i class="fa-solid fa-paper-plane"></i> Buat Ticket
             </button>
           </div>
