--- a/ticketing.html
+++ b/ticketing.html
@@ -70,7 +70,7 @@
           <!-- Pilih pelanggan -->
           <div class="mb-3">
             <select id="pelanggan" class="form-select" required>
-              <option value="">Pilih Pelanggan</option>
+              <option value="">pilih Pelanggan</option>
             </select>
           </div>
 
@@ -79,7 +79,7 @@
             <div id="techniciansList" class="tech-scroll mb-2">
               <!-- card teknisi dirender via JS -->
             </div>
-            <small class="text-muted">Klik teknisi yang akan diutus.</small>
+            <small class="text-muted">choose your hero.</small>
           </div>
 
           <!-- Waktu -->
@@ -96,7 +96,7 @@
 
           <div class="text-start">
             <button type="submit" class="btn btn-success">
-              <i class="fa-solid fa-paper-plane"></i> Buat Ticket
+              Generate
             </button>
           </div>
         </form>
