--- a/ticketing.html
+++ b/ticketing.html
@@ -64,7 +64,7 @@
         <form id="ticketForm">
           <!-- Problem -->
           <div class="mb-3">
-            <textarea id="problemDesc" class="form-control" rows="3" placeholder="Tuliskan masalah yang terjadi..." required></textarea>
+            <textarea id="problemDesc" class="form-control" rows="3" placeholder="ketikan masalah yang terjadi..." required></textarea>
           </div>
 
           <!-- Pilih pelanggan -->
