--- a/ticketing.html
+++ b/ticketing.html
@@ -70,7 +70,7 @@
           <!-- Pilih pelanggan -->
           <div class="mb-3">
             <select id="pelanggan" class="form-select" required>
-              <option value="">pilih Pelanggan</option>
+              <option value="">Pilih Pelanggan</option>
             </select>
           </div>
 
