--- a/absen.html
+++ b/absen.html
@@ -36,7 +36,7 @@
 
           <div class="mb-3">
             <label class="form-label d-block"></label>
-            <div class="d-flex gap-3 flex-wrap">
+            <div class="d-flex flex-column flex-md-row gap-3 flex-wrap">
               <div class="form-check flex-fill">
                 <input class="btn-check" type="radio" name="kegiatan" id="kegiatan1" value="Instalasi" autocomplete="off" required>
                 <label class="btn btn-outline-primary w-100 py-3" for="kegiatan1">
@@ -111,3 +111,4 @@
   <script type="module" src="/assets/js/absen.js"></script>
 </body>
 </html>
+
