--- a/ticketing.html
+++ b/ticketing.html
@@ -68,7 +68,7 @@
         <form id="ticketForm">
           <!-- Problem -->
           <div class="mb-3">
-            <textarea id="problemDesc" class="form-control" rows="3" placeholder="ketikan keluhan pelanggan"></textarea>
+            <textarea id="problemDesc" class="form-control" rows="3" placeholder="masukan keluhan pelanggan"></textarea>
           </div>
 
           <!-- Pilih pelanggan -->
@@ -90,6 +90,7 @@
          <div class="row">
   <div class="col-md-6 mb-3">
     <input type="date" id="startTime" class="form-control" />
+    <small class="text-muted" style="padding: 0.5rem; position: relative;">Masukan jadwal kunjungan.</small>
   </div>
 
           <div class="text-start">
