--- a/index.html
+++ b/index.html
@@ -138,6 +138,24 @@
         </div>
       </div>
       <div class="card mb-4">
+        <div class="card-header bg-success text-white" style="cursor:pointer;" data-bs-toggle="tooltip" 
+     data-bs-placement="top" 
+     title="Tekan untuk membuka Google Earth" onclick="window.open('https://earth.google.com/earth/d/1kLT0a7TCfYrv-K6jPxBXEHa1DDSO-58m?usp=sharing', '_blank')">
+          <i class="fa-solid fa-earth"></i> Topology
+        </div>
+        <div class="card-body">
+          <!-- Container responsive -->
+<div class="map-responsive" style="position: relative; width: 100%; padding-bottom: 56.25%;">
+  <iframe 
+    src="https://www.google.com/maps/d/u/0/embed?mid=1t7yZT4vgXimAwjYwZzfrVr8Ar89ei0Y&ehbc=2E312F" 
+    style="position: absolute; top:0; left:0; width:100%; height:100%; border:0;" 
+    allowfullscreen>
+  </iframe>
+</div>
+
+        </div>
+      </div>
+      <div class="card mb-4">
         <div class="card-header bg-success text-white">
           <i class="fas fa-cloud-sun"></i> Cuaca Citra Mulya Raya
         </div>
@@ -172,6 +190,12 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- jQuery (HARUS sebelum DataTables) -->
+     <script>
+      var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+  var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+    return new bootstrap.Tooltip(tooltipTriggerEl)
+  })
+    </script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
