--- a/ticketing.html
+++ b/ticketing.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="assets/css/styles.css"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet"/>
+  <link href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css" rel="stylesheet"/>
 
   <style>
     .tech-scroll {
@@ -86,6 +88,12 @@
             <small class="text-muted">Pilih teknisi yang tersedia.</small>
           </div>
 
+          <!-- Aksi -->
+           <!-- Form Aksi -->
+     <div class="mb-3">
+        <input type="text" id="aksiInput" class="form-control" placeholder="Masukan aksi (opsional)" />
+    </div>
+
           <!-- Waktu -->
          <div class="row">
   <div class="col-md-6 mb-3">
@@ -100,21 +108,64 @@
           </div>
         </form>
       </div>
+
+      </div>
+      </div>
+
+      <!-- Datatables -->
+
+      <div class="card mb-4">
+  <div class="card-header bg-success text-white d-flex justify-content-between align-items-center">
+    <div>
+      <select id="pageLengthSelect" class="form-select form-select-sm">
+        <option value="5">5</option>
+        <option value="10" selected>10</option>
+        <option value="25">25</option>
+      </select>
     </div>
+   <div class="header-controls">
+      </div>
+
+  </div>
+
+ <div class="card-body p-0">
+  <div class="table-responsive">
+    <table class="table table-striped mb-0 text-nowrap" id="tableTickets">
+      <thead class="table-light align-middle text-center">
+        <tr>
+   <th>Ticket</th>
+    <th>Customer</th>
+    <th>Alamat</th>
+    <th>Kendala</th>
+    <th>Aksi</th>
+    <th>Teknisi</th>
+    <th>Jadwal</th>
+
+  </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+
+</div>
+
  
     
 
-
-</div>
   <!-- Libs -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+ <!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
-  <!-- App scripts -->
-  <script type="module" src="assets/js/firebase-init.js"></script>
-  <script type="module" src="assets/js/navbar.js"></script>
-  <script type="module" src="assets/js/ticketing.js"></script>
-</body>
-</html>
+<!-- DataTables -->
+<script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+
+<!-- jsPDF dll -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+
+<!-- App scripts -->
+<script type="module" src="assets/js/firebase-init.js"></script>
+<script type="module" src="assets/js/navbar.js"></script>
+<script type="module" src="assets/js/tes.js"></script>
