--- a/ticketing.html
+++ b/ticketing.html
@@ -168,4 +168,4 @@
 <!-- App scripts -->
 <script type="module" src="assets/js/firebase-init.js"></script>
 <script type="module" src="assets/js/navbar.js"></script>
-<script type="module" src="assets/js/tes.js"></script>
+<script type="module" src="assets/js/ticketing.js"></script>
