--- a/ticketing.html
+++ b/ticketing.html
@@ -91,7 +91,7 @@
           <!-- Aksi -->
            <!-- Form Aksi -->
      <div class="mb-3">
-        <input type="text" id="aksiInput" class="form-control" placeholder="Masukan aksi (opsional)" />
+        <input type="text" id="aksiInput" class="form-control" placeholder="masukan rencana aksi" />
     </div>
 
           <!-- Waktu -->
