--- a/assets.html
+++ b/assets.html
@@ -60,7 +60,7 @@
       </div>
 
       <div class="card-body p-0 table-responsive">
-        <table class="table table-striped mb-0" id="tableAssets">
+        <table class="table table-striped mb-0 text-nowrap" id="tableAssets">
           <thead class="table-light">
             <tr>
               <th>No</th>
@@ -93,4 +93,5 @@
   <script type="module" src="/assets/js/assets.js"></script>
 </body>
 </html>
+
   
