--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.29/jspdf.plugin.autotable.min.js"></script>
-    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/genzethome/genzethome.github.io/refs/heads/main/assets/img/android-chrome-512x512.png">
+    <link rel="icon" type="image/x-icon" href="https://genzethome.github.io/assets/img/apple-touch-icon.png">
   </head>
   <body>
     <my-navbar></my-navbar>
@@ -209,4 +209,5 @@
     <script type="module" src="/assets/js/chart.js"></script>
   </body>
 </html>
+
 
