--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.29/jspdf.plugin.autotable.min.js"></script>
-    <link rel="icon" type="image/x-icon" href="https://genzethome.github.io/assets/img/apple-touch-icon.png">
+    <!-- Favicon dasar -->
+<link rel="icon" type="image/x-icon" href="https://genzethome.github.io/assets/img/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://genzethome.github.io/assets/img/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://genzethome.github.io/assets/img/favicon-32x32.png">
+
+<!-- Untuk Android -->
+<link rel="icon" type="image/png" sizes="192x192" href="https://genzethome.github.io/assets/img/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="https://genzethome.github.io/assets/img/android-chrome-512x512.png">
+
+<!-- Untuk iOS/Apple devices -->
+<link rel="apple-touch-icon" href="https://genzethome.github.io/assets/img/apple-touch-icon.png">
   </head>
   <body>
     <my-navbar></my-navbar>
@@ -209,5 +219,6 @@
     <script type="module" src="/assets/js/chart.js"></script>
   </body>
 </html>
+
 
 
