--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
           </div>
         </div>
       </div>
+          
       <!-- ✅ Card HEADER & container -->
       <div class="card mb-4">
         <div class="card-header bg-success text-white">
@@ -166,15 +167,13 @@
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script type="module" src="/assets/js/weather.js"></script>
+    <script type="module" src="/assets/js/timeline.js"></script>
     <script type="module" src="/assets/js/laporan.js"></script>
     <script type="module" src="/assets/js/navbar.js"></script>
     <script type="module" src="assets/js/kinerja.js"></script>
     <script type="module" src="/assets/js/chart.js"></script>
   </body>
 </html>
-
-
 
 
 
