--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@
                 <canvas id="barChart"></canvas>
               </div>
             </div>
+             <div class="col-md-6 mb-4">
+              <div style="height: 300px;">
+                <canvas id="pieChart"></canvas>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -169,6 +174,7 @@
     <script type="module" src="/assets/js/chart.js"></script>
   </body>
 </html>
+
 
 
 
