--- a/index.html
+++ b/index.html
@@ -1,182 +1,180 @@
 <!DOCTYPE html>
 <html lang="id">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Laporan Keuangan - GENZET HOME</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.1/css/all.min.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet" />
-    <link href="/assets/css/styles.css" rel="stylesheet" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" />
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.29/jspdf.plugin.autotable.min.js"></script>
-    <!-- Favicon dasar -->
-<link rel="icon" type="image/x-icon" href="https://genzethome.github.io/assets/img/favicon.ico">
-  </head>
-  <body>
-    <my-navbar></my-navbar>
-    <div class="container mb-5">
-      <div class="mb-3 text-end">
-        <button class="btn btn-secondary" id="refreshBtn">
-          <i class="fa-solid fa-rotate-right"></i>
-        </button>
-      </div>
-      <div class="row g-3 mb-4 text-center">
-        <div class="col-md-3">
-          <div class="p-3 border rounded bg-success text-white">
-            <h6>Total Pemasukan</h6>
-            <h5 id="totalPemasukan">Rp 0</h5>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="p-3 border rounded" style="background-color: #b22222; color: white;">
-            <h6>Total Pengeluaran</h6>
-            <h5 id="totalPengeluaran">Rp 0</h5>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="p-3 border rounded bg-warning text-dark">
-            <h6>Total Assets</h6>
-            <h5 id="totalAssets">Rp 0</h5>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="p-3 border rounded" style="background-color: #4682b4; color: white;">
-            <h6>Saldo Akhir</h6>
-            <h5 id="saldoAkhir">Rp 0</h5>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="p-3 border rounded bg-info text-dark">
-            <h6>Total Pelanggan</h6>
-            <h5 id="totalPelanggan">0</h5>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="p-3 border rounded" style="background-color: #005bac; color: white;">
-            <h6>Penghasilan Tetap</h6>
-            <h5 id="penghasilanPelanggan">Rp 0</h5>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="p-3 border rounded" style="background-color: #6f42c1; color: white;">
-            <h6>Mbps Tersebar</h6>
-            <h5 id="totalMbps">0 Mbps</h5>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Laporan Keuangan - GENZET HOME</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.1/css/all.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet" />
+  <link href="/assets/css/styles.css" rel="stylesheet" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" />
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+  <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.29/jspdf.plugin.autotable.min.js"></script>
+  <!-- Favicon dasar -->
+  <link rel="icon" type="image/x-icon" href="https://genzethome.github.io/assets/img/favicon.ico">
+</head>
+
+<body>
+  <my-navbar></my-navbar>
+  <div class="container mb-5">
+    <div class="mb-3 text-end">
+      <button class="btn btn-secondary" id="refreshBtn">
+        <i class="fa-solid fa-rotate-right"></i>
+      </button>
+    </div>
+    <div class="row g-3 mb-4 text-center">
+      <div class="col-md-3">
+        <div class="p-3 border rounded bg-success text-white">
+          <h6>Total Pemasukan</h6>
+          <h5 id="totalPemasukan">Rp 0</h5>
         </div>
       </div>
-      <div class="card mb-4">
-        <div class="card-header bg-success text-white">
-          <i class="fa-solid fa-chart-bar"></i> Perbandingan
-        </div>
-        <div class="card-body">
-          <div class="mb-2">
-            <small>Pemasukan</small>
-          </div>
-          <div class="progress mb-3">
-            <div id="progressPemasukan" class="progress-bar bg-success" style="width: 0%;"></div>
-          </div>
-          <div class="mb-2">
-            <small>Pengeluaran</small>
-          </div>
-          <div class="progress mb-3">
-            <div id="progressPengeluaran" class="progress-bar bg-danger" style="width: 0%;"></div>
-          </div>
-          <div class="mb-2">
-            <small>Assets</small>
-          </div>
-          <div class="progress mb-3">
-            <div id="progressAssets" class="progress-bar bg-warning" style="width: 0%;"></div>
-          </div>
-          <div class="mb-2">
-            <small>Saldo</small>
-          </div>
-          <div class="progress">
-            <div id="progressSaldo" class="progress-bar" style="background-color: #4682b4; width: 0%;"></div>
-          </div>
+      <div class="col-md-3">
+        <div class="p-3 border rounded" style="background-color: #b22222; color: white;">
+          <h6>Total Pengeluaran</h6>
+          <h5 id="totalPengeluaran">Rp 0</h5>
         </div>
       </div>
-      <div class="card mb-4">
-        <div class="card-header bg-success text-white">
-          <i class="fa-solid fa-chart-simple"></i> Performa
-        </div>
-        <div class="card-body p-0">
-          <div class="table-responsive">
-            <table class="table table-striped mb-0 text-nowrap" id="kinerjaTable">
-              <thead class="table-light align-middle text-center">
-                <tr>
-                  <th>No</th>
-                  <th>Nama</th>
-                  <th>Absensi</th>
-                  <th>Modal</th>
-                  <th>Power (%)</th>
-                </tr>
-              </thead>
-              <tbody id="kinerjaBody"></tbody>
-            </table>
-          </div>
+      <div class="col-md-3">
+        <div class="p-3 border rounded bg-warning text-dark">
+          <h6>Total Assets</h6>
+          <h5 id="totalAssets">Rp 0</h5>
         </div>
       </div>
-      <div class="card mb-4">
-        <div class="card-header bg-success text-white">
-          <i class="fa-solid fa-chart-simple"></i> Penanaman Modal
+      <div class="col-md-3">
+        <div class="p-3 border rounded" style="background-color: #4682b4; color: white;">
+          <h6>Saldo Akhir</h6>
+          <h5 id="saldoAkhir">Rp 0</h5>
         </div>
-        <div class="card-body">
-          <div class="row">
-            <div class="col-md-6 mb-4">
-              <div style="height: 300px;">
-                <canvas id="barChart"></canvas>
-              </div>
-            </div>
-             <div class="col-md-6 mb-4">
-              <div style="height: 300px;">
-                <canvas id="pieChart"></canvas>
-              </div>
+      </div>
+      <div class="col-md-3">
+        <div class="p-3 border rounded bg-info text-dark">
+          <h6>Total Pelanggan</h6>
+          <h5 id="totalPelanggan">0</h5>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="p-3 border rounded" style="background-color: #005bac; color: white;">
+          <h6>Penghasilan Tetap</h6>
+          <h5 id="penghasilanPelanggan">Rp 0</h5>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="p-3 border rounded" style="background-color: #6f42c1; color: white;">
+          <h6>Mbps Tersebar</h6>
+          <h5 id="totalMbps">0 Mbps</h5>
+        </div>
+      </div>
+    </div>
+    <div class="card mb-4">
+      <div class="card-header bg-success text-white">
+        <i class="fa-solid fa-chart-bar"></i> Perbandingan
+      </div>
+      <div class="card-body">
+        <div class="mb-2">
+          <small>Pemasukan</small>
+        </div>
+        <div class="progress mb-3">
+          <div id="progressPemasukan" class="progress-bar bg-success" style="width: 0%;"></div>
+        </div>
+        <div class="mb-2">
+          <small>Pengeluaran</small>
+        </div>
+        <div class="progress mb-3">
+          <div id="progressPengeluaran" class="progress-bar bg-danger" style="width: 0%;"></div>
+        </div>
+        <div class="mb-2">
+          <small>Assets</small>
+        </div>
+        <div class="progress mb-3">
+          <div id="progressAssets" class="progress-bar bg-warning" style="width: 0%;"></div>
+        </div>
+        <div class="mb-2">
+          <small>Saldo</small>
+        </div>
+        <div class="progress">
+          <div id="progressSaldo" class="progress-bar" style="background-color: #4682b4; width: 0%;"></div>
+        </div>
+      </div>
+    </div>
+    <div class="card mb-4">
+      <div class="card-header bg-success text-white">
+        <i class="fa-solid fa-chart-simple"></i> Performa
+      </div>
+      <div class="card-body p-0">
+        <div class="table-responsive">
+          <table class="table table-striped mb-0 text-nowrap" id="kinerjaTable">
+            <thead class="table-light align-middle text-center">
+              <tr>
+                <th style="width: 5%;">No</th>
+                <th class="text-start" style="width: 8%;">Nama</th>
+                <th style="width: 10%;">Lencana</th>
+                <th style="width: 10%;">Absensi</th>
+                <th style="width: 15%;">Modal</th>
+                <th style="width: 50%;">Power (%)</th>
+              </tr>
+            </thead>
+            <tbody id="kinerjaBody"></tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="card mb-4">
+      <div class="card-header bg-success text-white">
+        <i class="fa-solid fa-chart-simple"></i> Penanaman Modal
+      </div>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <div style="height: 300px;">
+              <canvas id="barChart"></canvas>
             </div>
           </div>
-        </div>
-      </div>
-          
-      <!-- ✅ Card HEADER & container -->
-      <div class="card mb-4">
-        <div class="card-header bg-success text-white">
-          <i class="fas fa-tasks"></i> Jadwal Jatuh Tempo
-        </div>
-        <div class="card-body">
-          <!-- Card isi akan di-render di sini -->
-          <div class="timeline-wrapper">
-            <div id="timeline"></div>
+          <div class="col-md-6 mb-4">
+            <div style="height: 300px;">
+              <canvas id="pieChart"></canvas>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- Tambahkan Chart.js CDN jika belum ada -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- jQuery (HARUS sebelum DataTables) -->
-     <script>
-      var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-  var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-    return new bootstrap.Tooltip(tooltipTriggerEl)
-  })
-    </script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script type="module" src="/assets/js/timeline.js"></script>
-    <script type="module" src="/assets/js/laporan.js"></script>
-    <script type="module" src="/assets/js/navbar.js"></script>
-    <script type="module" src="assets/js/kinerja.js"></script>
-    <script type="module" src="/assets/js/chart.js"></script>
-  </body>
+
+    <!-- ✅ Card HEADER & container -->
+    <div class="card mb-4">
+      <div class="card-header bg-success text-white">
+        <i class="fas fa-tasks"></i> Jadwal Jatuh Tempo
+      </div>
+      <div class="card-body">
+        <!-- Card isi akan di-render di sini -->
+        <div class="timeline-wrapper">
+          <div id="timeline"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Tambahkan Chart.js CDN jika belum ada -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- jQuery (HARUS sebelum DataTables) -->
+  <script>
+    var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+    var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+      return new bootstrap.Tooltip(tooltipTriggerEl)
+    })
+  </script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script type="module" src="/assets/js/timeline.js"></script>
+  <script type="module" src="/assets/js/laporan.js"></script>
+  <script type="module" src="/assets/js/navbar.js"></script>
+  <script type="module" src="assets/js/kinerja.js"></script>
+  <script type="module" src="/assets/js/chart.js"></script>
+</body>
+
 </html>
-
-
-
-
-
-
