--- a/pemasukan.html
+++ b/pemasukan.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GENZET HOME - Pemasukan</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.1/css/all.min.css" rel="stylesheet"/>
-  <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet"/>
-  <link href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.1/css/all.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet" />
+  <link href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css" rel="stylesheet" />
   <link href="/assets/css/styles.css" rel="stylesheet" />
 
 </head>
+
 <body>
 
   <!-- ✅ Navbar Web Component -->
@@ -45,17 +47,25 @@
     <div class="card mb-4">
       <div class="card-header bg-success text-white d-flex justify-content-between align-items-center">
         <div>
-          <select id="pageLengthSelect" class="form-select form-select-sm">
+          <select id="pageLengthSelect" class="form-select form-select-sm d-inline-block w-auto me-2">
             <option value="5">5</option>
             <option value="10" selected>10</option>
             <option value="25">25</option>
             <option value="50">50</option>
           </select>
+          <select id="filterKategori" class="form-select form-select-sm d-inline-block w-auto">
+            <option value="all" selected>Semua</option>
+            <option value="payment">Payment</option>
+            <option value="non-payment">Non Payment</option>
+          </select>
         </div>
         <div class="header-controls">
-          <i id="searchBtn" class="fa-solid fa-magnifying-glass" style="cursor:pointer; font-size:1.2rem;" title="Cari Data"></i>
-           <i id="exportExcelBtn" class="fa-solid fa-file-excel" style="cursor:pointer; font-size:1.2rem;" title="Export ke Excel"></i>
-          <i id="deleteSelectedBtn" class="fa-solid fa-trash" style="cursor:pointer; font-size:1.2rem;" title="Hapus Terpilih"></i>
+          <i id="searchBtn" class="fa-solid fa-magnifying-glass" style="cursor:pointer; font-size:1.2rem;"
+            title="Cari Data"></i>
+          <i id="exportExcelBtn" class="fa-solid fa-file-excel" style="cursor:pointer; font-size:1.2rem;"
+            title="Export ke Excel"></i>
+          <i id="deleteSelectedBtn" class="fa-solid fa-trash" style="cursor:pointer; font-size:1.2rem;"
+            title="Hapus Terpilih"></i>
         </div>
       </div>
 
@@ -90,5 +100,5 @@
   <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
   <script type="module" src="/assets/js/pemasukan.js"></script>
 </body>
+
 </html>
-  
