Restore index.html with complete structure

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
               <tr>
                 <th style="width: 5%;">No</th>
                 <th class="text-start" style="width: 15%;">Nama</th>
-                <th class="text-start" style="width: 25%;">Gaji (Attendance)</th>
-                <th class="text-start" style="width: 25%;">Dividen (Modal)</th>
+                <th class="text-start" style="width: 25%;">Gaji</th>
+                <th class="text-start" style="width: 25%;">Dividen</th>
                 <th class="text-start" style="width: 30%;">Total Terima</th>
               </tr>
             </thead>
@@ -207,5 +207,6 @@
   <script type="module" src="assets/js/kinerja.js"></script>
   <script type="module" src="/assets/js/chart.js"></script>
 </body>
+
 
 </html>
